# OTalign

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: backprop.md
examples/: sab.csv
otalign/functional/: sinkhorn.py
otalign/utils/: containers.py  dataset.py  log_utils.py
