[project]
name = "OTalign"
version = "0.0.1"
description = "Optimal Transport Alignment"
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "biopython (>=1.85,<2.0)",
    "torch (>=2.7.0,<3.0.0)",
    "pykeops (>=2.3,<3.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "accelerate (>=1.8.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "ruff (>=0.12.0,<0.13.0)",
]


[tool.ruff]
line-length = 119

# Exclude the following files and directories.
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "env",
    "venv",
]

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E402"]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
